--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,14 @@
     "license": "ISC",
     "dependencies": {
         "axios": "^1.12.2",
+        "bcrypt": "^6.0.0",
+        "bcryptjs": "^3.0.2",
         "cors": "^2.8.5",
         "dotenv": "^17.2.3",
         "express": "^5.1.0",
-        "nodemon": "^3.1.10"
+        "jsonwebtoken": "^9.0.2",
+        "mongoose": "^8.19.1",
+        "nodemon": "^3.1.10",
+        "uuid": "^13.0.0"
     }
 }
