--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.19.1",
         "nodemon": "^3.1.10",
-        "uuid": "^13.0.0"
+        "uuid": "^13.0.0",
+        "validator": "^13.15.15"
     }
 }
